# unicorn

./: .env.example  .gitignore  AGENTS.md  README.md  apply_migration.py  fix_supabase.py  index.html  main.py  main_memory_tool.py  netlify.toml  package.json  pnpm-lock.yaml  test_rbac.py  turbo.json  unicorn_cli.py  verify_god_mode.py  verify_schema.py
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  deploy.yml
apps/agent-server/: package.json  pyproject.toml
apps/agent-server/memory/: __init__.py
apps/agent-server/skills/: __init__.py
apps/agent-server/tests/: __init__.py  test_server.py
apps/agent-server/tools/: __init__.py
apps/web/: docusaurus.config.ts  package.json
apps/web/blog/: 2026-04-07-welcome-gts.md  authors.yml  tags.yml
apps/web/docs/: intro.md
apps/web/src/pages/: index.tsx  restricted.md
assets/js/: 25626d15.468afa10.js  37acbf14.a65388a4.js  81394e55.3781a275.js  fe0df626.3ac7e93a.js  main.acf45739.js
config/eslint/: index.js  package.json
config/tsconfig/: base.json  package.json
docs/aceso/supabase-setup/: index.html
docs/ai/face-recognition/: index.html
docs/national-strategy-pr/: index.html
docs/strategy/creator-capabilities/: index.html
docs/strategy/national-strategy/: index.html
en/: index.html
en/assets/js/: fe0df626.adbe80ea.js  main.57a7a0ec.js
en/docs/aceso/supabase-setup/: index.html
en/docs/ai/face-recognition/: index.html
en/docs/national-strategy-pr/: index.html
en/docs/strategy/creator-capabilities/: index.html
scripts/: cleanup-branches.sh  validate_site.py
(+2 files in other folders)
